[gd_scene load_steps=9 format=3 uid="uid://qc8bbp6044lb"]

[ext_resource type="Texture2D" uid="uid://befkh87ugythv" path="res://Items/Sprites/b_cloak.png" id="1_08ocx"]
[ext_resource type="Script" uid="uid://da20w1rpa8yuy" path="res://GUI/Inventory/Scripts/inventory_ui.gd" id="1_rieq4"]
[ext_resource type="PackedScene" uid="uid://cuv6ed6yntyvs" path="res://GUI/Inventory/inventory_slot.tscn" id="3_b4ojd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2iy0r"]
bg_color = Color(0.60038817, 0.60038817, 0.60038817, 0)

[sub_resource type="GDScript" id="GDScript_rieq4"]
resource_name = "sidebar"
script/source = "extends PanelContainer

@onready var main_menu : Panel = $MarginContainer/HBoxContainer/Menu
@onready var menu_parent : MarginContainer = $MarginContainer/HBoxContainer/Menu/MarginContainer
@onready var equipment: GridContainer = $MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment
@onready var inventory: InventoryUI = $MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory

func _ready() -> void:
	main_menu.visible = false

func _set_menu ( menu ) -> void :
	var wasClosed = menu.visible == false 
	
	_close_all_menus()
	
	main_menu.visible = wasClosed
	menu.visible = wasClosed

func _close_all_menus() -> void :
	for menu in menu_parent.get_children() :
		menu.visible = false

func _on_open_inventory_pressed() -> void:
	_set_menu ( inventory )


func _on_open_skills_pressed() -> void:
	_set_menu ( equipment )


#func _on_open_menu_pressed() -> void:
	#_set_menu ( menu )
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewr0p"]
bg_color = Color(0.53986263, 1.0348111e-06, 2.8878452e-07, 1)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77cip"]
bg_color = Color(0.60038817, 0.60038817, 0.60038817, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rieq4"]
bg_color = Color(0.13335153, 0.13335153, 0.13335153, 1)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="SideBar" type="PanelContainer"]
process_mode = 3
z_index = 5
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -332.0
offset_top = 91.0
offset_bottom = 91.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
mouse_behavior_recursive = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2iy0r")
script = SubResource("GDScript_rieq4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 32

[node name="Inventory" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ewr0p")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Inventory"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 33.0
offset_bottom = 31.0
texture = ExtResource("1_08ocx")
expand_mode = 1

[node name="OpenInventory" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Inventory"]
z_index = 5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_77cip")
theme_override_styles/pressed = SubResource("StyleBoxFlat_77cip")
theme_override_styles/hover = SubResource("StyleBoxFlat_77cip")

[node name="Skills" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ewr0p")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Skills"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OpenSkills" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Skills"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_77cip")
theme_override_styles/pressed = SubResource("StyleBoxFlat_77cip")
theme_override_styles/hover = SubResource("StyleBoxFlat_77cip")

[node name="Menu" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ewr0p")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Menu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="OpenMenu" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_77cip")
theme_override_styles/pressed = SubResource("StyleBoxFlat_77cip")
theme_override_styles/hover = SubResource("StyleBoxFlat_77cip")

[node name="Menu" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_rieq4")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Inventory" type="GridContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5
script = ExtResource("1_rieq4")

[node name="InventorySlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2
focus_mode = 1
mouse_filter = 2

[node name="InventorySlot2" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2
focus_neighbor_left = NodePath("../InventorySlot")

[node name="InventorySlot3" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot4" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot5" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot6" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot7" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot8" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot9" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot10" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot11" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot12" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot13" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot14" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot15" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot16" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot17" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot18" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot19" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="InventorySlot20" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Inventory" instance=ExtResource("3_b4ojd")]
layout_mode = 2

[node name="Equipment" type="GridContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer"]
layout_mode = 2

[node name="Spacer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer" instance=ExtResource("3_b4ojd")]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
focus_mode = 1
mouse_filter = 2
disabled = true

[node name="HeadSlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 1
mouse_filter = 2

[node name="Spacer2" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer" instance=ExtResource("3_b4ojd")]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
focus_mode = 1
mouse_filter = 2
disabled = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer"]
layout_mode = 2

[node name="ShoulderSlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer2" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer/HeadSlot")

[node name="NeckSlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer2" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer/HeadSlot")

[node name="BackSlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer2" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer/HeadSlot")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer"]
layout_mode = 2

[node name="HandSlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer3" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2

[node name="ChestSlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer3" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2

[node name="Ring1Slot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer3" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer"]
layout_mode = 2

[node name="Spacer2" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer4" instance=ExtResource("3_b4ojd")]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
focus_mode = 1
mouse_filter = 2
disabled = true

[node name="LegSlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer4" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2

[node name="Ring2Slot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer4" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer"]
layout_mode = 2

[node name="MainHandSlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer5" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2

[node name="FeetSlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer5" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2

[node name="OffHandSlot" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Equipment/VBoxContainer/HBoxContainer5" instance=ExtResource("3_b4ojd")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Inventory/OpenInventory" to="." method="_on_open_inventory_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Skills/OpenSkills" to="." method="_on_open_skills_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Menu/OpenMenu" to="." method="_on_open_menu_pressed"]
